--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
+      />
     <title>JavaScript to Image Converter</title>
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
-    />
+      />
     <base href="/" />
     <style type="text/css">
       body {
@@ -37,6 +37,22 @@
         font-size: 0.8rem;
         font-family: monospace;
       }
+
+      #output-image {
+        width: 64px;
+        height: 64px;
+      }
+
+      #output-image-download-info {
+        font-size: 0.7rem;
+        width: 146px;
+      }
+
+      .hallofframe {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+      }
     </style>
   </head>
   <body>
@@ -59,41 +75,36 @@
           <h4>Output:</h4>
           <ul class="nav nav-tabs">
             <li class="nav-item">
-              <a class="nav-link source-type-tab" id="type-text" href="#"
-                >Text to Image</a
-              >
+              <a class="nav-link source-type-tab" id="type-text" href="#">Text
+                to Image</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link source-type-tab" id="type-js" href="#"
-                >JavaScript to Image</a
-              >
+              <a class="nav-link source-type-tab" id="type-js" href="#">JavaScript
+                to Image</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link source-type-tab" id="type-css" href="#"
-                >CSS to Image</a
-              >
+              <a class="nav-link source-type-tab" id="type-css" href="#">CSS to
+                Image</a>
             </li>
             <li class="d-flex justify-content-end" style="flex-grow: 1;">
               <select
                 class="form-control mx-3"
                 id="image-style-select"
-                style="max-width: 250px;"
-              >
+                style="max-width: 250px;">
                 <option value="lighten">Lighten</option>
                 <option value="darken">Darken</option>
               </select>
               <button
                 type="button"
                 class="btn btn-primary m-0"
-                id="convert-button"
-              >
+                id="convert-button">
                 Convert
               </button>
             </li>
           </ul>
           <div
-            class="form-group d-flex my-2 justify-content-between align-items-center"
-          >
+            class="form-group d-flex my-2 justify-content-between
+            align-items-center">
             <div class="d-flex" id="target-type-container">
               <div class="form-check m-2">
                 <input
@@ -102,7 +113,7 @@
                   name="image-target-select"
                   value="internal"
                   id="image-internal"
-                />
+                  />
                 <label class="form-check-label" for="internal-external">
                   Inline image with HTML
                 </label>
@@ -114,27 +125,27 @@
                   name="image-target-select"
                   value="external"
                   id="image-external"
-                />
+                  />
                 <label class="form-check-label" for="image-external">
                   External Image file
                 </label>
               </div>
             </div>
             <div
-              class="d-flex justify-content-end"
-              id="image-download-container"
-            >
+              class="d-flex align-items-center justify-content-end"
+              id="image-download-container">
               <img
                 src=""
                 id="output-image"
                 class="m-0 mr-3"
-                style="width: 36px; height: 36px;"
-              />
-              <a href="#" id="output-image-download-link" download="image.png"
-                ><button type="button" class="btn btn-success m-0">
+                />
+              <a href="#" id="output-image-download-link" class="d-none"
+                download="image.png"><button type="button" class="btn
+                  btn-success m-0">
                   Download Image
-                </button></a
-              >
+                </button></a>
+              <span id="output-image-download-info" class="d-none">To download
+                image, right click on it and select "Save Image As..."</span>
             </div>
           </div>
           <div class="form-group" id="output-data-container">
@@ -142,23 +153,23 @@
               class="form-control"
               id="output-data"
               rows="10"
-              readonly
-            ></textarea>
+              readonly></textarea>
           </div>
           <div
             class="form-group d-flex justify-content-end"
-            id="clipboard-copy-container"
-          >
+            id="clipboard-copy-container">
             <button
               type="button"
               class="btn btn-success m-0"
-              id="clipboard-button"
-            >
+              id="clipboard-button">
               Copy to Clipboard
             </button>
           </div>
         </div>
       </div>
+    </div>
+    <div class="hallofframe">
+      <a href="./hallofframe">Hall of Frame</a>
     </div>
   </body>
   <script src="./source.js" type="text/javascript"></script>
